# lang-code

./: .gitignore  AGENTS.md  CAVEMAN.md  README.md  pyproject.toml
.agents/skills/caveman/: SKILL.md
src/lang_code/: agent.py  ansi.py  file_tools.py  main.py  tui.py
src/lang_code/prompts/: SYSTEM.md
src/lang_code/tools/: fs.py
