[project]
name = "lang-code"
version = "0.1.0"
description = "CLI based coding agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "langchain>=1.3.9",
    "langchain-ollama>=1.1.0",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "prompt-toolkit>=3.0.52",
    "python-dotenv>=1.2.2",
    "textual>=8.2.7",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "isort>=7.0.0",
]

[project.scripts]
code = "lang_code.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 80

[tool.isort]
profile = "black"
line_length = 80
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
